--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1>
             <span class="oralux">ORALUX</span>
         </h1>
-        <p>At Oralux, we transform smiles with exceptional care and advanced dental solutions, 
+        <p>At Oralux, we’re dedicated to transforming your smile with exceptional care and advanced dental solutions.
             <br>ensuring every visit is comfortable and personalized to your oral health goals.</p>
         <a href="#services" class="btn">Explore Our Services</a>
     </div>
@@ -45,27 +45,27 @@
 
 <section class="services">
     <div class="service">
-        <img src="images/root_canal.jpg" alt="Root Canal">
+        <img src="root_canal.jpg" alt="Root Canal">
         <h2>Root Canal</h2>
         <p>Save your teeth with this procedure that treats infection in the root of the tooth.</p>
     </div>
     <div class="service">
-        <img src="images/teeth_alignment.jpg" alt="Teeth Alignment">
+        <img src="teeth_alignment.jpg" alt="Teeth Alignment">
         <h2>Teeth Alignment</h2>
         <p>Achieve a straighter smile with personalized orthodontic treatments.</p>
     </div>
     <div class="service">
-        <img src="images/cavity_inspection.jpg" alt="Cavity Inspection">
+        <img src="cavity_inspection.jpg" alt="Cavity Inspection">
         <h2>Cavity Inspection</h2>
         <p>Regular check-ups to detect early signs of tooth decay and prevent damage.</p>
     </div>
     <div class="service">
-        <img src="images/oral_hygiene.jpg" alt="Oral Hygiene">
+        <img src="oral_hygiene.jpg" alt="Oral Hygiene">
         <h2>Oral Hygiene</h2>
         <p>Maintain a healthy smile with professional cleaning and care advice.</p>
     </div>
     <div class="service">
-        <img src="images/cosmetic_teeth.jpg" alt="Cosmetic Teeth">
+        <img src="cosmetic_teeth.jpg" alt="Cosmetic Teeth">
         <h2>Cosmetic Teeth</h2>
         <p>Enhance your smile with cosmetic procedures like whitening and veneers.</p>
     </div>
@@ -75,7 +75,7 @@
 <section id="about" class="about">
     <div class="about-container">
         <div class="about-image">
-            <img src="images/dentist.jpg" alt="Dentist">
+            <img src="dentist.jpg" alt="Dentist">
         </div>
         <div class="about-content">
             <h2>About Oralux</h2>
